# MontreBis

./: .gitignore  AGENTS.md  CMakeLists.txt  VERIFICATION_PROMPT.md  app.overlay  prj.conf
diagrams/: Bords_du_modele.drawio  Bords_du_modele_corrige.drawio  DFD.drawio  DFD_corrige.drawio  DFE.drawio  DFE_corrige.drawio  bords_projet_sombre.py  dfd_projet_sombre.py  dfe_projet_sombre.py  diagramme_bord_montre.py  diagramme_flot_donnees.py  diagramme_flot_evenements.py  diagramme_machine_etat.py
dts/bindings/input/: ti,tsc2007.yaml
src/: app_events.h  ble_service.c  ble_service.h  buttons.c  buttons.h  controller.c  controller.h  display_thread.c  display_thread.h  input_tsc2007.c  main.c  rtc_time.c  rtc_time.h  sensors.c  sensors.h  storage.c  storage.h  touch.c  touch.h
src/ui/: ui.c  ui.h  ui_before_modernize.c  ui_before_modernize.h
